# pdf2wiki

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  codecov.yml  pyproject.toml  security-insights.yml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  publish.yml  scorecard.yml
docs/: README.md
docs/architecture/: architecture.md
docs/decisions/: 0001-dual-backend-pipeline-and-hybrid.md  0002-code-merge-by-token-verification.md  0003-agpl-converter-mit-plugin-and-subprocess.md  0004-execution-backends-behind-one-port.md  0005-remote-mode-path-and-connection-hardening.md  README.md
docs/explanation/: dependencies.md  design-principles.md  how-the-merge-works.md  why-dual-backend.md
docs/how-to/: convert-a-book.md  convert-in-the-cloud.md  install.md  offload-hybrid-to-a-server.md  post-process-and-split.md  qa-a-conversion.md  run-a-batch.md  set-up-remote-gpu.md  troubleshoot.md
docs/llm-wiki/: README.md
docs/llm-wiki/explanation/: why-llm-wiki.md
docs/llm-wiki/how-to/: configure-vault-location.md  install.md  review-a-project.md
docs/llm-wiki/reference/: skills-and-agent.md  vault-layout.md
docs/llm-wiki/tutorials/: query-your-first-vault.md
docs/reference/: cli.md  configuration.md  output-layout.md  phase5-steps.md  pipeline-stages.md
docs/security/: assurance-case.md
docs/tutorials/: convert-your-first-book.md
plugin/: LICENSE  README.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: knowledge-researcher.md
plugin/skills/knowledge-query/: SKILL.md
plugin/skills/knowledge-review/: SKILL.md
src/pdf2wiki/: __init__.py  batch.py  cli.py  config.py  executor.py  render.py  scan.py
src/pdf2wiki/convert/: __init__.py  block.py  cloud.py  merge.py
src/pdf2wiki/phase5/: __init__.py  caption_unbleed.py  chapter_split.py  code_unescape.py  dash_normalize.py  lang_retag.py  mermaid_repair.py
src/pdf2wiki/qa/: __init__.py  flagged.py  review.py  sample.py
tests/: test_batch.py  test_block.py  test_cloud.py  test_convert.py  test_executor.py  test_golden.py  test_merge_diff.py  test_phase5.py  test_phase5_chain.py  test_phase5_properties.py  test_qa.py  test_render.py  test_scan.py
tests/__snapshots__/: test_golden.ambr
