[project]
name = "pdf2wiki"
version = "0.2.5"
description = "Convert technical books (native-text PDFs) into clean, chapter-split, LLM-ready Markdown using a dual-pass MinerU pipeline plus fidelity-preserving post-processing."
authors = [{ name = "Sevthered" }]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24,<2",
    "requests>=2.28",     # mineru.net Cloud API (convert --mineru-cloud)
]
keywords = ["pdf", "markdown", "mineru", "obsidian", "knowledge-base", "book", "conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/Sevthered/pdf2wiki"
Repository = "https://github.com/Sevthered/pdf2wiki"
Documentation = "https://github.com/Sevthered/pdf2wiki/tree/main/docs"
Issues = "https://github.com/Sevthered/pdf2wiki/issues"
Changelog = "https://github.com/Sevthered/pdf2wiki/blob/main/CHANGELOG.md"

[project.scripts]
pdf2wiki = "pdf2wiki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2wiki"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "syrupy>=4",
    "hypothesis>=6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "SIM", "RUF"]
ignore = [
    "E501",                        # code width is the formatter's job; long comments/strings are intentional
    "E741",                        # a/b/l are intentional short names for page ranges / block pairs in merge
    "RUF001", "RUF002", "RUF003",  # ×, —, → are deliberate in CLI output / comments
    "RUF059",                      # unused-unpacked-variable — naming-convention noise, not a defect
    "SIM105",                      # try/except/pass reads clearer than contextlib.suppress here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "E402", "RUF043"]  # assert-False idiom; sys.path.insert before imports; raises-match patterns
