[project]
name = "pdf2wiki"
version = "0.2.6"
description = "Convert technical books (native-text PDFs) into clean, chapter-split, LLM-ready Markdown using a dual-pass MinerU pipeline plus fidelity-preserving post-processing."
authors = [{ name = "Sevthered" }]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24,<2",
    "requests>=2.28",     # mineru.net Cloud API (convert --mineru-cloud)
]
keywords = ["pdf", "markdown", "mineru", "obsidian", "knowledge-base", "book", "conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/Sevthered/pdf2wiki"
Repository = "https://github.com/Sevthered/pdf2wiki"
Documentation = "https://github.com/Sevthered/pdf2wiki/tree/main/docs"
Issues = "https://github.com/Sevthered/pdf2wiki/issues"
Changelog = "https://github.com/Sevthered/pdf2wiki/blob/main/CHANGELOG.md"

[project.scripts]
pdf2wiki = "pdf2wiki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2wiki"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "syrupy>=4",
    "hypothesis>=6",
    "mypy>=1.11",
    "types-requests>=2.28",
    "reuse>=5",
    "pre-commit>=4.6.1",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "SIM", "RUF", "S"]  # S = flake8-bandit security lint (SAST)
ignore = [
    "E501",                        # code width is the formatter's job; long comments/strings are intentional
    "E741",                        # a/b/l are intentional short names for page ranges / block pairs in merge
    "RUF001", "RUF002", "RUF003",  # ×, —, → are deliberate in CLI output / comments
    "RUF059",                      # unused-unpacked-variable — naming-convention noise, not a defect
    "SIM105",                      # try/except/pass reads clearer than contextlib.suppress here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "E402", "RUF043", "S101", "S105", "S106"]  # assert-False; sys.path.insert; raises-match; asserts ARE the tests; dummy fixture tokens are not secrets (S105/S106)

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pdf2wiki"]  # the shipped package; tests keep their sys.path/fixture looseness

# pymupdf ships no type information and has no stub package. It IS installed (a runtime dep), so
# without follow_imports=skip mypy would analyze its untyped API and flag every call under strict;
# skip makes it a clean Any boundary.
[[tool.mypy.overrides]]
module = ["pymupdf", "pymupdf.*", "fitz", "fitz.*"]
ignore_missing_imports = true
follow_imports = "skip"
